[workspace]
resolver = "2"
members = [
    "agent_api_rest",
    "agent_application",
    "agent_event_publisher_http",
    "agent_issuance",
    "agent_secret_manager",
    "agent_shared",
    "agent_store",
    "agent_verification",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

[workspace.dependencies]
did_manager = { git = "https://git@github.com/impierce/did-manager.git", rev = "2bda2b8" }
siopv2 = { git = "https://git@github.com/impierce/openid4vc.git", rev = "12fed14" }
oid4vci = { git = "https://git@github.com/impierce/openid4vc.git", rev = "12fed14" }
oid4vc-core = { git = "https://git@github.com/impierce/openid4vc.git", rev = "12fed14" }
oid4vc-manager = { git = "https://git@github.com/impierce/openid4vc.git", rev = "12fed14" }
oid4vp = { git = "https://git@github.com/impierce/openid4vc.git", rev = "12fed14" }

async-trait = "0.1"
axum = { version = "0.7", features = ["tracing"] }
base64 = "0.22"
cqrs-es = "0.4.2"
futures = "0.3"
identity_credential = { version = "1.3", default-features = false, features = [
    "validator",
    "credential",
    "presentation",
    "domain-linkage"
] }
identity_iota = { version = "1.3" }
jsonwebtoken = "9.3"
lazy_static = "1.4"
rstest = "0.19"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = "3.7"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-test = { version = "0.2" }
url = "2.5"
uuid = { version = "1.4", features = ["v4", "fast-rng", "serde"] }
wiremock = "0.6"
