[workspace]
resolver = "2"
members = [
    "agent_api_rest",
    "agent_application",
    "agent_event_publisher_http",
    "agent_holder",
    "agent_identity",
    "agent_issuance",
    "agent_secret_manager",
    "agent_shared",
    "agent_store",
    "agent_verification",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

[workspace.dependencies]
# did_manager = { git = "https://git@github.com/impierce/did-manager.git", tag = "v1.0.0-beta.3" }
did_manager = { git = "https://git@github.com/impierce/did-manager.git", rev = "c1cfda0" }
# siopv2 = { path = "../openid4vc/siopv2" }
# oid4vci = { path = "../openid4vc/oid4vci" }
# oid4vc-core = { path = "../openid4vc/oid4vc-core" }
# oid4vc-manager = { path = "../openid4vc/oid4vc-manager" }
# oid4vp = { path = "../openid4vc/oid4vp" }
siopv2 = { git = "https://git@github.com/impierce/openid4vc.git", rev = "bc4d6d2" }
oid4vci = { git = "https://git@github.com/impierce/openid4vc.git", rev = "bc4d6d2" }
oid4vc-core = { git = "https://git@github.com/impierce/openid4vc.git", rev = "bc4d6d2" }
oid4vc-manager = { git = "https://git@github.com/impierce/openid4vc.git", rev = "bc4d6d2" }
oid4vp = { git = "https://git@github.com/impierce/openid4vc.git", rev = "bc4d6d2" }

async-trait = "0.1"
axum = { version = "0.7", features = ["tracing"] }
base64 = "0.22"
cqrs-es = "0.4.2"
futures = "0.3"
identity_core = { git = "https://github.com/impierce/identity.rs", branch = "fix/compile-fixes" }
identity_credential = { git = "https://github.com/impierce/identity.rs", branch = "fix/compile-fixes", default-features = false, features = [
    "validator",
    "credential",
    "presentation",
    "domain-linkage",
    "sd-jwt-vc"
] }

identity_did = { git = "https://github.com/impierce/identity.rs", branch = "fix/compile-fixes" }
identity_document = { git = "https://github.com/impierce/identity.rs", branch = "fix/compile-fixes" }
identity_iota = { git = "https://github.com/impierce/identity.rs", branch = "fix/compile-fixes" }
identity_verification = { git = "https://github.com/impierce/identity.rs", branch = "fix/compile-fixes", default-features = false }
jsonwebtoken = "9.3"
lazy_static = "1.4"
mime = { version = "0.3" }
once_cell = { version = "1.19" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rstest = "0.22"
sd-jwt-payload-rework = { package = "sd-jwt-payload", git = "https://github.com/iotaledger/sd-jwt-payload.git", rev = "0300fc5", default-features = false, features = ["sha"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = "3.7"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-test = { version = "0.2" }
url = "2.5"
uuid = { version = "1.4", features = ["v4", "fast-rng", "serde"] }
wiremock = "0.6"
