[package]
name = "agent_api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agent_core = { path = "../agent_core" }
axum = { version = "0.6", features = ["headers"] }
axum-macros = { version = "0.3" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.33", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["cors", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1.5" }
