[package]
name = "agent_api_rest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agent_issuance = { path = "../agent_issuance" }
agent_shared = { path = "../agent_shared" }
agent_verification = { path = "../agent_verification" }

axum.workspace = true
axum-auth = "0.7"
axum-macros = "0.4"
http-api-problem = "0.57"
hyper = { version = "1.2" }
oid4vc-core.workspace = true
oid4vci.workspace = true
oid4vp.workspace = true
serde.workspace = true
serde_json.workspace = true
siopv2.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
agent_event_publisher_http = { path = "../agent_event_publisher_http", features = ["test"] }
agent_secret_manager = { path = "../agent_secret_manager" }
agent_shared = { path = "../agent_shared", features = ["test"] }
agent_store = { path = "../agent_store" }
agent_verification = { path = "../agent_verification", features = ["test"] }

futures.workspace = true
jsonwebtoken.workspace = true
lazy_static.workspace = true
mime = { version = "0.3" }
oid4vc-core.workspace = true
oid4vc-manager.workspace = true
rstest.workspace = true
serde_urlencoded = "0.7"
serde_yaml.workspace = true
serial_test = "3.0"
tower = { version = "0.4" }
tracing-test.workspace = true
url.workspace = true
wiremock.workspace = true
