[package]
name = "agent_application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agent_api_rest = { path = "../agent_api_rest" }
agent_event_publisher_http = { path = "../agent_event_publisher_http" }
agent_issuance = { path = "../agent_issuance" }
agent_secret_manager = { path = "../agent_secret_manager" }
agent_shared = { path = "../agent_shared" }
agent_store = { path = "../agent_store" }
agent_verification = { path = "../agent_verification" }

axum.workspace = true
did_manager.workspace = true
lazy_static.workspace = true
oid4vc-core.workspace = true
serde_json.workspace = true
siopv2.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
