[package]
name = "agent_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0" }                  # TODO: prefer thiserror
identity_core = { version = "=1.0.0-rc.1" }
identity_credential.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1.5", features = ["v4"] }
