[package]
name = "agent_event_publisher_http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agent_issuance = { path = "../agent_issuance" }
agent_store = { path = "../agent_store" }
agent_verification = { path = "../agent_verification" }

anyhow = "1.0"
async-trait.workspace = true
cqrs-es.workspace = true
reqwest = { version = "0.11", features = ["json"] }
serde.workspace = true
serde_with.workspace = true
serde_yaml = "0.9"

[dev-dependencies]
agent_event_publisher_http = { path = ".", features = ["test"] }
agent_shared = { path = "../agent_shared", features = ["test"] }

serde_json.workspace = true
tokio.workspace = true
wiremock = "0.6"

[features]
test = []
