[package]
name = "agent_event_publisher_http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agent_issuance = { path = "../agent_issuance" }
agent_shared = { path = "../agent_shared" }
agent_store = { path = "../agent_store" }
agent_verification = { path = "../agent_verification" }

anyhow = "1.0"
async-trait.workspace = true
cqrs-es.workspace = true
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "std",
    "tls12"
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
agent_event_publisher_http = { path = ".", features = ["test_utils"] }
agent_shared = { path = "../agent_shared", features = ["test_utils"] }

serde_json.workspace = true
tokio.workspace = true
wiremock.workspace = true

[features]
test_utils = []
