[package]
name = "agent_holder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agent_shared = { path = "../agent_shared" }
agent_secret_manager = { path = "../agent_secret_manager" }

async-trait.workspace = true
base64.workspace = true
cqrs-es.workspace = true
identity_credential.workspace = true
jsonwebtoken.workspace = true
oid4vci.workspace = true
oid4vc-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# `test_utils` dependencies
rstest = { workspace = true, optional = true }

[dev-dependencies]
agent_api_rest = { path = "../agent_api_rest" }
agent_holder = { path = ".", features = ["test_utils"] }
agent_issuance = { path = "../agent_issuance", features = ["test_utils"] }
agent_secret_manager = { path = "../agent_secret_manager", features = ["test_utils"] }
agent_shared = { path = "../agent_shared", features = ["test_utils"] }
agent_store = { path = "../agent_store" }

axum.workspace = true
did_manager.workspace = true
lazy_static.workspace = true
mime.workspace = true
names = { version = "0.14", default-features = false }
reqwest.workspace = true
rand = "0.8"
serial_test = "3.0"
tokio.workspace = true
tower.workspace = true
tracing-test.workspace = true
async-std = { version = "1.5", features = ["attributes", "tokio1"] }

[features]
test_utils = ["dep:rstest"]
