[package]
name = "agent_identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agent_shared = { path = "../agent_shared" }
agent_secret_manager = { path = "../agent_secret_manager" }

async-trait.workspace = true
base64.workspace = true
cqrs-es.workspace = true
derivative = "2.2"
did_manager.workspace = true
identity_credential.workspace = true
identity_core = "1.3"
identity_document = { version = "1.3" }
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
test_utils = []
