[package]
name = "agent_issuance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agent_shared = { path = "../agent_shared" }
agent_secret_manager = { path = "../agent_secret_manager" }

async-trait.workspace = true
cqrs-es.workspace = true
chrono = "0.4"
types-ob-v3 = { git = "https://github.com/impierce/digital-credential-data-models.git", rev = "9f16c27" }
derivative = "2.2"
identity_core.workspace = true
identity_credential.workspace = true
jsonwebtoken.workspace = true
oid4vci.workspace = true
oid4vc-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

# `test_utils` dependencies
lazy_static = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }

[dev-dependencies]
agent_holder = { path = "../agent_holder", features = ["test_utils"] }
agent_issuance = { path = ".", features = ["test_utils"] }
agent_secret_manager = { path = "../agent_secret_manager", features = ["test_utils"] }
agent_shared = { path = "../agent_shared", features = ["test_utils"] }

did_manager.workspace = true
serial_test = "3.0"
tracing-test.workspace = true
async-std = { version = "1.5", features = ["attributes", "tokio1"] }

[features]
test_utils = [
    "dep:lazy_static",
    "dep:once_cell",
    "dep:rstest",
]
