[package]
name = "agent_secret_manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agent_shared = { path = "../agent_shared" }

anyhow = "1.0"
async-trait = "0.1"
base64.workspace = true
cqrs-es = "0.4.2"
did_manager.workspace = true
identity_iota.workspace = true
jsonwebtoken = "9.3"
log = "0.4"
oid4vc-core.workspace = true
p256 = { version = "0.13", features = ["jwk"] }
serde.workspace = true
serde_json = "1.0"
tokio.workspace = true
url.workspace = true

[dev-dependencies]
agent_shared = { path = "../agent_shared", features = ["test_utils"] }

futures.workspace = true
lazy_static.workspace = true
ring = "0.17.8"
