[package]
name = "agent_shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
config = { version = "0.14" }
cqrs-es.workspace = true
did_manager.workspace = true
dotenvy = { version = "0.15" }
identity_core = { version = "1.3" }
identity_credential = { version = "1.3" }
identity_document = { version = "1.3" }
identity_storage = { version = "1.3" }
# TODO: replace all identity_* with identity_iota?
# identity_iota = { version = "1.3" }
rand = "0.8"
thiserror.workspace = true
time = { version = "0.3" }
tracing.workspace = true
url.workspace = true

[features]
test = []
