[package]
name = "agent_shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
config = { version = "0.14" }
cqrs-es.workspace = true
did_manager.workspace = true
dotenvy = { version = "0.15" }
identity_core = { version = "1.3" }
identity_credential.workspace = true
identity_did = { version = "1.3" }
identity_document = { version = "1.3" }
identity_storage = { version = "1.3" }
is_empty = "0.2"
jsonwebtoken.workspace = true
# TODO: replace all identity_* with identity_iota?
identity_iota.workspace = true
oid4vc-core.workspace = true
oid4vci.workspace = true
oid4vp.workspace = true
once_cell = { version = "1.19" }
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
serde_with = "3.0"
serde_yaml.workspace = true
strum = { version = "0.26", features = ["derive"] }
thiserror.workspace = true
time = { version = "0.3" }
tracing.workspace = true
url.workspace = true

[features]
local_development = []
test_utils = []
