[package]
name = "agent_shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
config = { version = "0.14" }
cqrs-es.workspace = true
dotenvy = { version = "0.15" }
# TODO: replace all identity_* with identity_iota?
identity_iota.workspace = true
jsonwebtoken.workspace = true
oid4vc-core.workspace = true
oid4vci.workspace = true
oid4vp.workspace = true
once_cell.workspace = true
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
serde_with = "3.0"
strum = { version = "0.26", features = ["derive"] }
thiserror.workspace = true
time = { version = "0.3" }
tracing.workspace = true
url.workspace = true

[features]
local_development = []
test_utils = []
