[package]
name = "agent_storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
surrealdb = { version = "1.0", features = ["kv-mem"] }
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.5", features = ["v4"] }
