[package]
name = "agent_store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agent_issuance = { path = "../agent_issuance" }
agent_shared = { path = "../agent_shared" }
agent_verification = { path = "../agent_verification" }

async-trait = "0.1"
cqrs-es.workspace = true
postgres-es = "0.4.10"
serde_json.workspace = true
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "json",
] }
tokio.workspace = true
