[package]
name = "agent_verification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agent_secret_manager = { path = "../agent_secret_manager" }
agent_shared = { path = "../agent_shared" }

anyhow = "1.0"
async-trait.workspace = true
axum.workspace = true
cqrs-es.workspace = true
futures.workspace = true
oid4vc-core.workspace = true
oid4vc-manager.workspace = true
serde.workspace = true
siopv2.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
tokio.workspace = true

[dev-dependencies]
agent_shared = { path = "../agent_shared", features = ["test"] }
agent_verification = { path = ".", features = ["test"] }

did_manager.workspace = true
lazy_static.workspace = true
rstest.workspace = true
serial_test = "3.0"

[features]
test = []
